# Phoenix-SmartAutomation

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  THIN_SLICE_USAGE.md  build.ps1  config.example.yaml  phoenix-intelligence.spec  phoenix.db-journal  pyproject.toml
alembic/: env.py
contracts/: openapi.yaml
docs/: END_USER_GUIDE.html  END_USER_GUIDE.md  MCP.md  MCP_CONFIGURATION.md  MCP_QUICK_START.md  architecture.md  generate_pdf.py  report_9cbbe1fc.html  sample_report.html
examples/: cli_usage.md  (+6 more)
phoenix-intelligence/: .gitignore  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  start_server.bat  start_server.ps1  user_story.txt
phoenix-intelligence/api/: __init__.py  models.py  server.py
phoenix-intelligence/infra/: __init__.py
phoenix-intelligence/manual_tests/: manual_test_001_manual_test_candidate_vacancy_association.md  manual_test_001_manual_test_employee_creation.md  manual_test_001_manual_test_hr_admin_login_dashboard_access.md  manual_test_001_manual_test_personal_leave_application.md  manual_test_001_manual_test_user_search_by_role_and_status.md
phoenix-intelligence/prompts/automation_from_manual/: 1.0.md  2.0.md  3.0.md  3.0_bdd.md
phoenix-intelligence/prompts/failure_analyzer/: 1.0.md
phoenix-intelligence/prompts/locator_expert/: 1.0.md
phoenix-intelligence/prompts/manual_test_generator/: 1.0.md
phoenix-intelligence/prompts/script_fixer/: 1.0.md
phoenix-intelligence/prompts/test_generator/: 1.0.md  1.1.md  1.2.md
phoenix-intelligence/prompts/test_name/: 1.0.md
phoenix-intelligence/prompts/test_quality_standards/: 1.0.md
phoenix-intelligence/services/: __init__.py  cache.py  config.py  locator.py  logger.py
phoenix-intelligence/services/agents/: __init__.py  base.py  failure_analyzer.py  locator_expert.py  registry.py  script_fixer.py  test_generator.py
phoenix-intelligence/services/agents/helpers/: __init__.py  dynamic_detector.py
phoenix-intelligence/services/knowledge/: __init__.py  base.py
phoenix-intelligence/services/knowledge/best_practices/: test_design.md
phoenix-intelligence/services/knowledge/domain_knowledge/: orangehrm.md
phoenix-intelligence/services/knowledge/locator_strategies/: locator_priority.md
phoenix-intelligence/services/knowledge/playwright/: assertion_patterns.md  assertions.md  locator_rules.md  security_rules.md  waiting_rules.md
phoenix-intelligence/services/knowledge/test_patterns/: crud_operations.md  login_flow.md
phoenix-intelligence/services/llm/: __init__.py  client.py  prompt_loader.py  prompts.py  router.py
phoenix-intelligence/services/mcp/: __init__.py  client.py  handlers.py  server.py
shared/: pyproject.toml
shared/phoenix_shared/: __init__.py
shared/phoenix_shared/contracts/: __init__.py  requests.py  responses.py
shared/phoenix_shared/models/: __init__.py  automation_script.py  locator.py  test_case.py
(+218 files in other folders)
